# Another-Engine

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: CMakeLists.txt
include/doctest/: doctest.h
include/glad/: glad.c  glad.h
libs/: assimp-vc143-mtd.exp  glfw3.lib
shaders/: default.fs  default.vs
src/: camera.cpp  main.cpp  material.cpp  scene.cpp  shader.cpp  texture.cpp
src/headers/: camera.hpp  logger.hpp  material.hpp  scene.hpp  shader.hpp  texture.hpp
